--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL="https://naughty-kowalevski-53a5e4.netlify.app/clients/"
+VITE_API_URL="https://mockend.com/gabdlr/react-project-15/clients"
